objects/Chat_Message__c.object
<CustomObject>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/06826000000dHTR&quot;, &apos;image alternate text&apos;,240,320)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_1__c</fullName>
        <label>Participant 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_2__c</fullName>
        <label>Participant 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <formula>Participant_1__c + &apos;,&apos; +  Participant_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Described whether a particular message has been read by the user or not</description>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <label>Chat Message</label>
    <language>en_US</language>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>